--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
-AUTH_LDAP_SERVER_URI="ldap://test.example.com:389"
-AUTH_LDAP_BIND_DN = "cn=admin,dc=example,dc=com"
-AUTH_LDAP_BIND_PASSWORD="test@1234"
-AUTH_LDAP_USER_DIRECTORY="OU=users,DC=example,DC=com"
-AUTH_LDAP_USER_UID="(uid=%  (user)s)"
+AUTH_LDAP_SERVER_URI="ldap://staging.ru:389"
+AUTH_LDAP_BIND_DN = "cn=admin,dc=example,dc=org"
+AUTH_LDAP_BIND_PASSWORD="test1234"
+AUTH_LDAP_USER_DIRECTORY="OU=django,DC=example,DC=org"
+AUTH_LDAP_USER_UID="(uid=%(user)s)"
