--- a/example.env
+++ b/example.env
@@ -3,3 +3,4 @@ AUTH_LDAP_BIND_DN = "cn=admin,dc=example,dc=org"
 AUTH_LDAP_BIND_PASSWORD="test1234"
 AUTH_LDAP_USER_DIRECTORY="OU=django,DC=example,DC=org"
 AUTH_LDAP_USER_UID="(uid=%(user)s)"
+AUTH_LDAP_GROUP_TYPE=PosixGroupType
