--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 Django==3.1.7
 django-auth-ldap==2.3.0
 djangorestframework==3.12.2
+psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 python-dotenv==0.15.0
